@@ -1,6 +1,6 @@
 % Quick Reference Card for gnuplot 2004
 %
-% $Id: gpcard.tex,v 1.8 2011/08/09 17:34:29 sfeam Exp $
+% $Id: gpcard.tex,v 1.9 2014/03/08 07:30:11 sfeam Exp $
 %
 % Format stolen shamelessly from the GNU Emacs reference card
 %**start of header
